Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13499

Backing up table that "doesn't exist in engine" cause crash in mariabackup when using encryption

    XMLWordPrintable

Details

    • 10.1.31

    Description

      When there is file for a table in a database directory in the datadir which is not in the data dictionary for InnoDB and tables are encrypted, then running mariaback will crash mariabackup with a core dump.
      How to reproduce:
      Install MariaDB 10.1.26 and MariaDB-Backup
      $ sudo bash

      1. service mysql start
      2. mysql -u root test -e "CREATE TABLE t1(c1 INT)"
      3. mysql -u root test -e "INSERT INTO t1 VALUES(1)"
      4. service mysql stop
      5. cd /var/lib/mysql/test
      6. cp t1.frm t1_1.frm
      7. cp t1.ibd t1_1.ibd
      8. chown mysql:mysql t1_1.*
      9. service mysql start
      10. mkdir /tmp/backup
      11. mariabackup --backup --target-dir=/tmp/backup/ --user=root
        Crash!

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              karlsson Anders Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: