MDEV-13499: Backing up table that "doesn't exist in engine" cause crash in mariabackup when using encryption

Problem was that there is intentional crah when .ibd file does
not found. In mariabackup case we should avoid this crash.